Blender 3.2.0 - Sculpt's Smear Brush at 0 strength creates black attribute color #98698

Closed
opened 2022-06-08 22:57:05 +02:00 by Rodger Davis · 7 comments

System Information
Operating system: Linux-5.18.1-arch1-1-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce GT 1030/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691

Short description of error
While in sculpt mode, use the smear brush at 0 strength and it creates a black attribute color on the mesh.

The black generated color doesn't depend on brush color. This issue always creates a black attribute color.

Exact steps for others to reproduce the error

  1. Open Blender with factory settings
  2. Select cube
  3. Go to sculpt mode
  4. Select smear brush tool
  5. Set current brush's strength to 0
  6. Paint on mesh's verts

More info

  • If the Color attribute's Data type is "Color" then you cannot paint on top of this black generated color. Smearing or Blurring this will generate more of these black faces/verts.

  • If the Color attribute's Data type is "Face Corner" then you are able to paint on top of the black generated color. Smearing or Blurring will allow you to smear the black generated color

**System Information** Operating system: Linux-5.18.1-arch1-1-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce GT 1030/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` **Short description of error** While in sculpt mode, use the smear brush at 0 strength and it creates a black attribute color on the mesh. The black generated color doesn't depend on brush color. This issue always creates a black attribute color. **Exact steps for others to reproduce the error** 1. Open Blender with factory settings 2. Select cube 3. Go to sculpt mode 4. Select smear brush tool 5. Set current brush's strength to 0 6. Paint on mesh's verts ____ **More info** - If the Color attribute's Data type is "Color" then you cannot paint on top of this black generated color. Smearing or Blurring this will generate more of these black faces/verts. - If the Color attribute's Data type is "Face Corner" then you are able to paint on top of the black generated color. Smearing or Blurring will allow you to smear the black generated color
Author

Added subscriber: @RodDavis

Added subscriber: @RodDavis
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @JosephEagar, @JulienKaspar

Added subscribers: @JosephEagar, @JulienKaspar
Member

@JosephEagar Can you take a look at this?

@JosephEagar Can you take a look at this?

This issue was referenced by b9ad027b44

This issue was referenced by b9ad027b4482945a548f1c017ec307e475188bf1

This issue was referenced by a720a4aabb

This issue was referenced by a720a4aabb44973a87d51e68037c0a694cdd0567
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-07-04 10:20:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98698
No description provided.