Fix T98698: Division by zero in smear code when strength is zero